--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,7 @@
   ],
   "dependencies": {
     "angular": "~1.4.4",
-    "bootstrap": "~3.3.5"
+    "bootstrap": "~3.3.5",
+    "angular-bootstrap": "~0.13.3"
   }
 }
